WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128888
[iOS] WebKit crashes if text is copied to pasteboard with style containing text-shadow
https://bugs.webkit.org/show_bug.cgi?id=128888
Summary
[iOS] WebKit crashes if text is copied to pasteboard with style containing te...
Pratik Solanki
Reported
2014-02-16 13:54:36 PST
Can't copy text if its style contains text-shadow.
Attachments
Patch
(2.94 KB, patch)
2014-02-16 14:02 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-02-16 13:54:56 PST
<
rdar://problem/16065699
>
Pratik Solanki
Comment 2
2014-02-16 14:02:50 PST
Created
attachment 224322
[details]
Patch
WebKit Commit Bot
Comment 3
2014-02-16 16:45:26 PST
Comment on
attachment 224322
[details]
Patch Clearing flags on attachment: 224322 Committed
r164199
: <
http://trac.webkit.org/changeset/164199
>
WebKit Commit Bot
Comment 4
2014-02-16 16:45:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug