[iOS] WebKit crashes if text is copied to pasteboard with style containing text-shadow https://bugs.webkit.org/show_bug.cgi?id=128888 <rdar://problem/16065699>

Reviewed by Anders Carlsson.

Use the correct class on iOS so that we don't crash.

* platform/mac/HTMLConverter.mm:
(_shadowForShadowStyle):


Canonical link: https://commits.webkit.org/146930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164199 268f45cc-cd09-0410-ab3c-d52691b4dbfc