Source/WebCore/platform/mac/HTMLConverter.mm
@@ -137,6 +137,7 @@ SOFT_LINK_CONSTANT(UIFoundation, NSCocoaVersionDocumentAttribute, NSString *)
 #define PlatformNSTextTab           getNSTextTabClass()
 #define PlatformColor               UIColor
 #define PlatformColorClass          getUIColorClass()
+#define PlatformNSColorClass        getNSColorClass()
 #define PlatformFont                UIFont
 #define PlatformFontClass           getUIFontClass()
 #else
@@ -150,6 +151,7 @@ SOFT_LINK_CONSTANT(UIFoundation, NSCocoaVersionDocumentAttribute, NSString *)
 #define PlatformNSTextTab           NSTextTab
 #define PlatformColor               NSColor
 #define PlatformColorClass          NSColor
+#define PlatformNSColorClass        NSColor
 #define PlatformFont                NSFont
 #define PlatformFontClass           NSFont
 
@@ -274,7 +276,6 @@ typedef NSUInteger NSTextTabType;
 
 @interface NSColor : UIColor
 + (id)colorWithCalibratedRed:(CGFloat)red green:(CGFloat)green blue:(CGFloat)blue alpha:(CGFloat)alpha;
-+ (id)colorWithCalibratedWhite:(CGFloat)white alpha:(CGFloat)alpha;
 @end
 
 @interface UIFont
@@ -880,7 +881,7 @@ static inline NSShadow *_shadowForShadowStyle(NSString *shadowStyle)
             CGFloat green = [[components objectAtIndex:1] floatValue] / 255;
             CGFloat blue = [[components objectAtIndex:2] floatValue] / 255;
             CGFloat alpha = ([components count] >= 4) ? [[components objectAtIndex:3] floatValue] / 255 : 1;
-            NSColor *shadowColor = [PlatformColorClass colorWithCalibratedRed:red green:green blue:blue alpha:alpha];
+            NSColor *shadowColor = [PlatformNSColorClass colorWithCalibratedRed:red green:green blue:blue alpha:alpha];
             NSSize shadowOffset;
             CGFloat shadowBlurRadius;
             firstRange = [shadowStyle rangeOfString:@"px"];
